Remove unsused div and fix select/save button alignment issue

--- a/src/components/UserAccount.css
+++ b/src/components/UserAccount.css
@@ -1,11 +1,8 @@
 .user_page {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 }
 
-.user_menu {
-	width: 15%;
-	border: solid black;
-
-}
 
